--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -31,7 +31,7 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
               <li><a href="/" class="nav-link px-3 link-secondary">Home</a></li>
               <li><a href="/about" class="nav-link px-3 link-secondary">About</a></li>
-              <li><a href="/submit" class="nav-link px-3 link-secondary">Submit</a></li>
+              <li><a href="/submit-post" class="nav-link px-3 link-secondary">Submit</a></li>
               <li><a href="/contact" class="nav-link px-3 link-secondary">Contact</a></li>
             </ul>
       
@@ -60,5 +60,7 @@
 </div>
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
